generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

// ============================================
// Users & Authentication
// ============================================

model User {
  id              String    @id @default(uuid()) @db.Uuid
  email           String    @unique @db.VarChar(255)
  passwordHash    String    @map("password_hash") @db.VarChar(255)
  phone           String?   @unique @db.VarChar(20)
  phoneVerified   Boolean   @default(false) @map("phone_verified")
  phoneVerifiedAt DateTime? @map("phone_verified_at")
  emailVerified   Boolean   @default(false) @map("email_verified")
  isActive        Boolean   @default(true) @map("is_active")
  lastLoginAt     DateTime? @map("last_login_at")
  createdAt       DateTime  @default(now()) @map("created_at")
  updatedAt       DateTime  @updatedAt @map("updated_at")

  // Relations
  roles                    UserRole[]
  applicantProfile         ApplicantProfile?
  refreshTokens            RefreshToken[]
  formCollections          FormCollection[]              @relation("FormCollectedBy")
  sectionReviews           DeclarationSectionReview[]    @relation("SectionReviewedBy")
  sectionResolutions       DeclarationSectionReview[]    @relation("SectionResolvedBy")
  reviews                  Review[]                      @relation("ReviewedBy")
  receipts                 Receipt[]                     @relation("GeneratedBy")
  auditLogs                AuditLog[]
  notifications            Notification[]
  notificationPrefs        NotificationPreference?
  notificationTypePrefs    NotificationTypePreference[]
  accessibilityPrefs       AccessibilityPreference?
  archivedRecords          ArchivedRecord[]              @relation("ArchivedBy")
  passwordResetTokens      PasswordResetToken[]
  emailVerificationTokens  EmailVerificationToken[]
  phoneVerificationTokens  PhoneVerificationToken[]
  declarationStatusChanges DeclarationStatusHistory[]    @relation("StatusChangedBy")
  verificationReviews      ApplicantVerificationReview[] @relation("VerificationReviewedBy")
  formReissuesRequested    FormReissueRequest[]          @relation("ReissueRequestedBy")
  formReissuesReviewed     FormReissueRequest[]          @relation("ReissueReviewedBy")

  @@map("users")
}

model Role {
  id          Int     @id @default(autoincrement())
  name        String  @unique @db.VarChar(50)
  description String? @db.Text

  // Relations
  users UserRole[]

  @@map("roles")
}

model UserRole {
  userId String @map("user_id") @db.Uuid
  roleId Int    @map("role_id")

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)
  role Role @relation(fields: [roleId], references: [id], onDelete: Cascade)

  @@id([userId, roleId])
  @@map("user_roles")
}

model RefreshToken {
  id          String    @id @default(uuid()) @db.Uuid
  userId      String    @map("user_id") @db.Uuid
  token       String    @unique @db.VarChar(500)
  // Family identifier — every refresh in a session inherits the familyId
  // of the consumed token; presenting a token whose row has `consumedAt`
  // set is treated as a replay and tears down the family. Nullable to
  // tolerate pre-migration rows that haven't rotated yet.
  familyId    String?   @map("family_id") @db.Uuid
  consumedAt  DateTime? @map("consumed_at")
  expiresAt   DateTime  @map("expires_at")
  createdAt   DateTime  @default(now()) @map("created_at")

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId])
  @@index([token])
  @@index([familyId])
  @@map("refresh_tokens")
}

model PasswordResetToken {
  id        String    @id @default(uuid()) @db.Uuid
  userId    String    @map("user_id") @db.Uuid
  token     String    @unique @db.VarChar(255)
  expiresAt DateTime  @map("expires_at")
  usedAt    DateTime? @map("used_at")
  createdAt DateTime  @default(now()) @map("created_at")

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([token])
  @@map("password_reset_tokens")
}

model EmailVerificationToken {
  id        String    @id @default(uuid()) @db.Uuid
  userId    String    @map("user_id") @db.Uuid
  token     String    @unique @db.VarChar(255)
  expiresAt DateTime  @map("expires_at")
  usedAt    DateTime? @map("used_at")
  createdAt DateTime  @default(now()) @map("created_at")

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([token])
  @@index([userId])
  @@map("email_verification_tokens")
}

model PhoneVerificationToken {
  id        String    @id @default(uuid()) @db.Uuid
  userId    String    @map("user_id") @db.Uuid
  code      String    @db.VarChar(6)
  attempts  Int       @default(0)
  expiresAt DateTime  @map("expires_at")
  usedAt    DateTime? @map("used_at")
  createdAt DateTime  @default(now()) @map("created_at")

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId])
  @@index([userId, usedAt])
  @@map("phone_verification_tokens")
}

// ============================================
// Applicant Profiles
// ============================================

model ApplicantProfile {
  id                 String             @id @default(uuid()) @db.Uuid
  userId             String             @unique @map("user_id") @db.Uuid
  fullName           String             @map("full_name") @db.VarChar(255)
  idType             IdDocumentType     @default(GHANA_CARD) @map("id_type")
  // National-ID columns are encrypted at rest. The `*Cipher` column holds
  // an AES-256-GCM envelope (see server/utils/pii-encryption.ts) and the
  // `*Hash` column holds a deterministic HMAC-SHA256 over the canonical
  // plaintext, which is what equality / uniqueness queries match against.
  // The legacy plaintext columns (`ghana_card_number`, `alternate_id_number`)
  // were dropped in the 20260526010000_pii_encryption_drop_plaintext migration.
  ghanaCardNumberCipher   String? @map("ghana_card_number_cipher") @db.Text
  ghanaCardNumberHash     String? @unique @map("ghana_card_number_hash") @db.VarChar(64)
  ghanaCardFrontUrl       String? @map("ghana_card_front_url") @db.Text
  ghanaCardBackUrl        String? @map("ghana_card_back_url") @db.Text
  alternateIdNumberCipher String? @map("alternate_id_number_cipher") @db.Text
  alternateIdNumberHash   String? @map("alternate_id_number_hash") @db.VarChar(64)
  alternateIdScanUrl      String?            @map("alternate_id_scan_url") @db.Text
  alternateIdReason       AlternateIdReason? @map("alternate_id_reason")
  alternateIdDetails      String?            @map("alternate_id_details") @db.Text
  createdAt               DateTime           @default(now()) @map("created_at")
  updatedAt               DateTime           @updatedAt @map("updated_at")
  verificationStatus      VerificationStatus @default(PENDING_VERIFICATION) @map("verification_status")

  // Relations
  user                User                          @relation(fields: [userId], references: [id], onDelete: Cascade)
  offices             ApplicantOffice[]
  declarations        Declaration[]
  verificationReviews ApplicantVerificationReview[]

  @@unique([idType, alternateIdNumberHash], name: "applicant_profiles_alt_id_hash_key")
  @@index([verificationStatus])
  @@index([idType])
  @@map("applicant_profiles")
}

model ApplicantVerificationReview {
  id                 String             @id @default(uuid()) @db.Uuid
  applicantId        String             @map("applicant_id") @db.Uuid
  reviewerId         String             @map("reviewer_id") @db.Uuid
  status             VerificationStatus
  reason             String             @db.Text
  messageToApplicant String?            @map("message_to_applicant") @db.Text
  createdAt          DateTime           @default(now()) @map("created_at")

  // Relations
  applicant ApplicantProfile @relation(fields: [applicantId], references: [id], onDelete: Cascade)
  reviewer  User             @relation("VerificationReviewedBy", fields: [reviewerId], references: [id])

  @@index([applicantId])
  @@index([createdAt])
  @@map("applicant_verification_reviews")
}

model ApplicantOffice {
  id               String    @id @default(uuid()) @db.Uuid
  profileId        String    @map("profile_id") @db.Uuid
  designation      String    @db.VarChar(255)
  officeCategoryId Int       @map("office_category_id")
  institutionId    String?   @map("institution_id") @db.Uuid
  startDate        DateTime  @map("start_date") @db.Date
  endDate          DateTime? @map("end_date") @db.Date
  createdAt        DateTime  @default(now()) @map("created_at")
  updatedAt        DateTime  @updatedAt @map("updated_at")

  profile        ApplicantProfile     @relation(fields: [profileId], references: [id], onDelete: Cascade)
  officeCategory PublicOfficeCategory @relation(fields: [officeCategoryId], references: [id])
  institution    Institution?         @relation(fields: [institutionId], references: [id])

  @@map("applicant_offices")
}

// ============================================
// Reference Data
// ============================================

model PublicOfficeCategory {
  id               Int     @id @default(autoincrement())
  name             String  @db.VarChar(255)
  description      String? @db.Text
  articleReference String? @map("article_reference") @db.VarChar(50)
  isActive         Boolean @default(true) @map("is_active")

  // Relations
  applicantOffices ApplicantOffice[]

  @@map("public_office_categories")
}

model Institution {
  id       String  @id @default(uuid()) @db.Uuid
  name     String  @db.VarChar(255)
  type     String? @db.VarChar(100)
  isActive Boolean @default(true) @map("is_active")

  // Relations
  applicantOffices ApplicantOffice[]

  @@map("institutions")
}

// ============================================
// Declarations & Workflow
// ============================================

enum DeclarationStatus {
  CODE_GENERATED
  FORM_COLLECTED
  SUBMITTED
  UNDER_REVIEW
  APPROVED
  REJECTED
  SEALED

  @@map("declaration_status")
}

enum FormSection {
  PERSONAL_PARTICULARS
  PROPERTIES
  EMPLOYMENT_BUSINESS
  SECURITIES_BANK
  ALIASES_PROPERTIES
  LIABILITIES
  VOLUNTARY_INFO
  DECLARANT_CERTIFICATE

  @@map("form_section")
}

enum CollectionOfficeType {
  HEADQUARTERS
  REGIONAL

  @@map("collection_office_type")
}

enum VerificationStatus {
  PENDING_VERIFICATION
  VERIFIED
  ON_HOLD
  MORE_INFO_REQUIRED
  REJECTED

  @@map("verification_status")
}

enum FormReissueStatus {
  PENDING
  APPROVED
  DECLINED

  @@map("form_reissue_status")
}

enum ReissueApproverType {
  AUDITOR_GENERAL
  REGIONAL_AUDITOR

  @@map("reissue_approver_type")
}

enum IdDocumentType {
  GHANA_CARD
  PASSPORT
  VOTER_ID
  DRIVERS_LICENSE
  NIA_RECEIPT

  @@map("id_document_type")
}

enum AlternateIdReason {
  PENDING_NIA_REGISTRATION
  FOREIGN_NATIONAL
  LOST_AWAITING_REISSUE
  DAMAGED_AWAITING_REISSUE
  OTHER

  @@map("alternate_id_reason")
}

model Declaration {
  id                    String            @id @default(uuid()) @db.Uuid
  applicantId           String            @map("applicant_id") @db.Uuid
  uniqueCode            String            @unique @map("unique_code") @db.VarChar(20)
  status                DeclarationStatus @default(CODE_GENERATED)
  submittedAt           DateTime?         @map("submitted_at")
  returnOfficeId        String?           @map("return_office_id") @db.Uuid
  previousDeclarationId String?           @unique @map("previous_declaration_id") @db.Uuid
  createdAt             DateTime          @default(now()) @map("created_at")
  updatedAt             DateTime          @updatedAt @map("updated_at")

  // Relations
  applicant           ApplicantProfile           @relation(fields: [applicantId], references: [id])
  returnOffice        CollectionOffice?          @relation("FormReturnedTo", fields: [returnOfficeId], references: [id])
  formCollections     FormCollection[]
  formReissueRequests FormReissueRequest[]
  reviews             Review[]
  receipts            Receipt[]
  sectionReviews      DeclarationSectionReview[]
  statusHistory       DeclarationStatusHistory[]
  previousDeclaration Declaration?               @relation("DeclarationChain", fields: [previousDeclarationId], references: [id])
  nextDeclaration     Declaration?               @relation("DeclarationChain")

  @@index([uniqueCode])
  @@index([status])
  @@map("declarations")
}

model DeclarationStatusHistory {
  id            String            @id @default(uuid()) @db.Uuid
  declarationId String            @map("declaration_id") @db.Uuid
  status        DeclarationStatus
  changedById   String?           @map("changed_by_id") @db.Uuid
  notes         String?           @db.Text
  createdAt     DateTime          @default(now()) @map("created_at")

  // Relations
  declaration Declaration @relation(fields: [declarationId], references: [id], onDelete: Cascade)
  changedBy   User?       @relation("StatusChangedBy", fields: [changedById], references: [id])

  @@index([declarationId])
  @@index([createdAt])
  @@index([status, createdAt])
  @@map("declaration_status_history")
}

model CollectionOffice {
  id        String               @id @default(uuid()) @db.Uuid
  name      String               @db.VarChar(255)
  type      CollectionOfficeType
  region    String?              @db.VarChar(255)
  isActive  Boolean              @default(true) @map("is_active")
  createdAt DateTime             @default(now()) @map("created_at")

  // Relations
  formCollections FormCollection[]
  formReturns     Declaration[]    @relation("FormReturnedTo")

  @@map("collection_offices")
}

model FormCollection {
  id                 String   @id @default(uuid()) @db.Uuid
  declarationId      String   @map("declaration_id") @db.Uuid
  recordedBy         String   @map("recorded_by") @db.Uuid
  collectionOfficeId String   @map("collection_office_id") @db.Uuid
  collectedAt        DateTime @map("collected_at")
  notes              String?  @db.Text
  createdAt          DateTime @default(now()) @map("created_at")

  // Relations
  declaration      Declaration      @relation(fields: [declarationId], references: [id])
  recorder         User             @relation("FormCollectedBy", fields: [recordedBy], references: [id])
  collectionOffice CollectionOffice @relation(fields: [collectionOfficeId], references: [id])

  @@index([declarationId])
  @@index([collectionOfficeId])
  @@map("form_collections")
}

model FormReissueRequest {
  id             String               @id @default(uuid()) @db.Uuid
  declarationId  String               @map("declaration_id") @db.Uuid
  requestedById  String               @map("requested_by_id") @db.Uuid
  status         FormReissueStatus    @default(PENDING)
  applicantNote  String?              @map("applicant_note") @db.Text
  reviewedById   String?              @map("reviewed_by_id") @db.Uuid
  approverType   ReissueApproverType? @map("approver_type")
  approverDetail String?              @map("approver_detail") @db.VarChar(255)
  letterScanUrl  String?              @map("letter_scan_url") @db.Text
  decisionReason String?              @map("decision_reason") @db.Text
  reviewedAt     DateTime?            @map("reviewed_at")
  createdAt      DateTime             @default(now()) @map("created_at")

  // Relations
  declaration Declaration @relation(fields: [declarationId], references: [id], onDelete: Cascade)
  requestedBy User        @relation("ReissueRequestedBy", fields: [requestedById], references: [id])
  reviewedBy  User?       @relation("ReissueReviewedBy", fields: [reviewedById], references: [id])

  @@index([declarationId])
  @@index([status])
  @@map("form_reissue_requests")
}

enum ReviewStatus {
  APPROVED
  REJECTED

  @@map("review_status")
}

model Review {
  id              String       @id @default(uuid()) @db.Uuid
  declarationId   String       @map("declaration_id") @db.Uuid
  reviewedBy      String       @map("reviewed_by") @db.Uuid
  reviewDate      DateTime     @map("review_date")
  status          ReviewStatus
  rejectionReason String?      @map("rejection_reason") @db.Text
  createdAt       DateTime     @default(now()) @map("created_at")

  // Relations
  declaration Declaration @relation(fields: [declarationId], references: [id])
  reviewer    User        @relation("ReviewedBy", fields: [reviewedBy], references: [id])

  @@map("reviews")
}

model Receipt {
  id            String   @id @default(uuid()) @db.Uuid
  declarationId String   @map("declaration_id") @db.Uuid
  receiptNumber String   @unique @map("receipt_number") @db.VarChar(50)
  generatedBy   String   @map("generated_by") @db.Uuid
  pdfUrl        String?  @map("pdf_url") @db.Text
  createdAt     DateTime @default(now()) @map("created_at")

  // Relations
  declaration Declaration @relation(fields: [declarationId], references: [id])
  generator   User        @relation("GeneratedBy", fields: [generatedBy], references: [id])

  @@map("receipts")
}

// ============================================
// Section Review (Declaration Form Review)
// ============================================

model DeclarationSectionReview {
  id            String      @id @default(uuid()) @db.Uuid
  declarationId String      @map("declaration_id") @db.Uuid
  reviewedBy    String      @map("reviewed_by") @db.Uuid
  section       FormSection
  isAcceptable  Boolean     @map("is_acceptable")
  comments      String?     @db.Text
  resolvedAt    DateTime?   @map("resolved_at")
  resolvedById  String?     @map("resolved_by_id") @db.Uuid
  createdAt     DateTime    @default(now()) @map("created_at")

  // Relations
  declaration Declaration @relation(fields: [declarationId], references: [id], onDelete: Cascade)
  reviewer    User        @relation("SectionReviewedBy", fields: [reviewedBy], references: [id])
  resolvedBy  User?       @relation("SectionResolvedBy", fields: [resolvedById], references: [id])

  @@index([declarationId])
  @@map("declaration_section_reviews")
}

// ============================================
// Audit Trail (Government Compliance)
// ============================================

model AuditLog {
  id         String   @id @default(uuid()) @db.Uuid
  userId     String?  @map("user_id") @db.Uuid
  action     String   @db.VarChar(100)
  entityType String?  @map("entity_type") @db.VarChar(50)
  entityId   String?  @map("entity_id") @db.Uuid
  oldValues  Json?    @map("old_values")
  newValues  Json?    @map("new_values")
  ipAddress  String?  @map("ip_address") @db.VarChar(45)
  userAgent  String?  @map("user_agent") @db.Text
  sessionId  String?  @map("session_id") @db.VarChar(100)
  createdAt  DateTime @default(now()) @map("created_at")

  // Relations
  user User? @relation(fields: [userId], references: [id])

  @@index([userId])
  @@index([entityType, entityId])
  @@index([createdAt])
  @@map("audit_logs")
}

// ============================================
// Notification System
// ============================================

enum NotificationType {
  UNIQUE_CODE_GENERATED
  FORM_COLLECTED
  FORM_RETURNED
  FORM_REISSUE_REQUESTED
  FORM_REISSUE_APPROVED
  FORM_REISSUE_DECLINED
  SECTION_REVIEW_COMMENTS
  REVIEW_APPROVED
  REVIEW_REJECTED
  RECEIPT_READY
  PASSWORD_RESET
  EMAIL_VERIFICATION
  VERIFICATION_SUBMITTED
  VERIFICATION_APPROVED
  VERIFICATION_REJECTED
  VERIFICATION_ON_HOLD
  VERIFICATION_MORE_INFO_REQUIRED

  @@map("notification_type")
}

enum NotificationChannel {
  EMAIL
  SMS
  IN_APP

  @@map("notification_channel")
}

model Notification {
  id        String              @id @default(uuid()) @db.Uuid
  userId    String              @map("user_id") @db.Uuid
  type      NotificationType
  channel   NotificationChannel
  title     String              @db.VarChar(255)
  message   String              @db.Text
  metadata  Json?
  dedupeKey String?             @map("dedupe_key") @db.VarChar(255)
  readAt    DateTime?           @map("read_at")
  createdAt DateTime            @default(now()) @map("created_at")

  // Relations
  user         User                      @relation(fields: [userId], references: [id], onDelete: Cascade)
  deliveryLogs NotificationDeliveryLog[]

  @@index([userId])
  @@index([readAt])
  @@index([userId, type, dedupeKey, createdAt])
  @@map("notifications")
}

model NotificationPreference {
  id           String   @id @default(uuid()) @db.Uuid
  userId       String   @unique @map("user_id") @db.Uuid
  emailEnabled Boolean  @default(true) @map("email_enabled")
  smsEnabled   Boolean  @default(true) @map("sms_enabled")
  inAppEnabled Boolean  @default(true) @map("in_app_enabled")
  createdAt    DateTime @default(now()) @map("created_at")
  updatedAt    DateTime @updatedAt @map("updated_at")

  // Relations
  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@map("notification_preferences")
}

model NotificationTypePreference {
  id           String           @id @default(uuid()) @db.Uuid
  userId       String           @map("user_id") @db.Uuid
  type         NotificationType
  emailEnabled Boolean          @default(true) @map("email_enabled")
  smsEnabled   Boolean          @default(true) @map("sms_enabled")
  inAppEnabled Boolean          @default(true) @map("in_app_enabled")
  createdAt    DateTime         @default(now()) @map("created_at")
  updatedAt    DateTime         @updatedAt @map("updated_at")

  // Relations
  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([userId, type])
  @@map("notification_type_preferences")
}

model AccessibilityPreference {
  id             String   @id @default(uuid()) @db.Uuid
  userId         String   @unique @map("user_id") @db.Uuid
  textSize       String   @default("base") @map("text_size") @db.VarChar(16)
  reduceMotion   Boolean  @default(false) @map("reduce_motion")
  underlineLinks Boolean  @default(false) @map("underline_links")
  readableFont   Boolean  @default(false) @map("readable_font")
  createdAt      DateTime @default(now()) @map("created_at")
  updatedAt      DateTime @updatedAt @map("updated_at")

  // Relations
  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@map("accessibility_preferences")
}

enum DeliveryStatus {
  PENDING
  SENT
  DELIVERED
  FAILED

  @@map("delivery_status")
}

model NotificationDeliveryLog {
  id               String              @id @default(uuid()) @db.Uuid
  notificationId   String              @map("notification_id") @db.Uuid
  channel          NotificationChannel
  status           DeliveryStatus      @default(PENDING)
  providerResponse Json?               @map("provider_response")
  retryCount       Int                 @default(0) @map("retry_count")
  sentAt           DateTime?           @map("sent_at")
  deliveredAt      DateTime?           @map("delivered_at")
  createdAt        DateTime            @default(now()) @map("created_at")

  // Relations
  notification Notification @relation(fields: [notificationId], references: [id], onDelete: Cascade)

  @@index([notificationId])
  @@index([status])
  @@map("notification_delivery_logs")
}

// ============================================
// Data Retention & Compliance
// ============================================

model DataRetentionPolicy {
  id                  Int     @id @default(autoincrement())
  entityType          String  @map("entity_type") @db.VarChar(50)
  retentionPeriodDays Int     @map("retention_period_days")
  archiveAfterDays    Int?    @map("archive_after_days")
  deleteAfterDays     Int?    @map("delete_after_days")
  isActive            Boolean @default(true) @map("is_active")

  @@map("data_retention_policies")
}

model ArchivedRecord {
  id                    String    @id @default(uuid()) @db.Uuid
  entityType            String    @map("entity_type") @db.VarChar(50)
  entityId              String    @map("entity_id") @db.Uuid
  archivedData          Json      @map("archived_data")
  archivedBy            String?   @map("archived_by") @db.Uuid
  archivedAt            DateTime  @default(now()) @map("archived_at")
  scheduledDeletionDate DateTime? @map("scheduled_deletion_date") @db.Date

  // Relations
  archiver User? @relation("ArchivedBy", fields: [archivedBy], references: [id])

  @@index([entityType, entityId])
  @@map("archived_records")
}

// ============================================
// Contact Submissions
// ============================================

enum ContactCategory {
  GENERAL_INQUIRY
  TECHNICAL_SUPPORT
  DECLARATION_HELP
  FEEDBACK
  COMPLAINT
  OTHER

  @@map("contact_category")
}

enum ContactStatus {
  NEW
  IN_PROGRESS
  RESOLVED
  CLOSED

  @@map("contact_status")
}

model ContactSubmission {
  id          String          @id @default(uuid()) @db.Uuid
  name        String          @db.VarChar(255)
  email       String          @db.VarChar(255)
  phone       String?         @db.VarChar(20)
  category    ContactCategory @default(GENERAL_INQUIRY)
  subject     String          @db.VarChar(255)
  message     String          @db.Text
  status      ContactStatus   @default(NEW)
  ipAddress   String?         @map("ip_address") @db.VarChar(45)
  userAgent   String?         @map("user_agent") @db.Text
  respondedAt DateTime?       @map("responded_at")
  createdAt   DateTime        @default(now()) @map("created_at")
  updatedAt   DateTime        @updatedAt @map("updated_at")

  @@index([status])
  @@index([category])
  @@index([createdAt])
  @@map("contact_submissions")
}

// ============================================
// Web Analytics, Abuse Detection & Rate Limiting
// ============================================

enum VisitorClass {
  HUMAN
  SEARCH_BOT
  AI_AGENT
  OTHER_BOT

  @@map("visitor_class")
}

enum AiCategory {
  TRAINING_CRAWLER
  SEARCH_INDEXER
  LIVE_RETRIEVAL
  UNKNOWN_SCRAPER

  @@map("ai_category")
}

enum AbuseSeverity {
  LOW
  MEDIUM
  HIGH
  CRITICAL

  @@map("abuse_severity")
}

enum EnforcementType {
  LOG_ONLY
  THROTTLE
  BLOCK

  @@map("enforcement_type")
}

enum AccessRuleType {
  ALLOW
  BLOCK

  @@map("access_rule_type")
}

enum AccessActorType {
  IP
  SESSION
  USER

  @@map("access_actor_type")
}

/// Raw, high-write-volume traffic log. Pruned past the retention window by a
/// scheduled task. Dashboard queries read the rollup tables, not this one.
model TrafficEvent {
  id            String       @id @default(uuid()) @db.Uuid
  occurredAt    DateTime     @default(now()) @map("occurred_at")
  method        String       @db.VarChar(10)
  path          String       @db.Text
  routePattern  String       @map("route_pattern") @db.VarChar(255)
  statusCode    Int          @map("status_code")
  durationMs    Int          @default(0) @map("duration_ms")
  responseBytes Int          @default(0) @map("response_bytes")
  referrer      String?      @db.Text
  referrerHost  String?      @map("referrer_host") @db.VarChar(255)
  userAgent     String?      @map("user_agent") @db.Text
  browser       String?      @db.VarChar(60)
  os            String?      @db.VarChar(60)
  deviceType    String?      @map("device_type") @db.VarChar(20)
  isBot         Boolean      @default(false) @map("is_bot")
  visitorClass  VisitorClass @default(HUMAN) @map("visitor_class")
  aiProvider    String?      @map("ai_provider") @db.VarChar(60)
  aiCategory    AiCategory?  @map("ai_category")
  aiVerified    String?      @map("ai_verified") @db.VarChar(20)
  ipHash        String       @map("ip_hash") @db.VarChar(64)
  ipTruncated   String?      @map("ip_truncated") @db.VarChar(45)
  country       String?      @db.VarChar(2)
  userId        String?      @map("user_id") @db.Uuid
  userRole      String?      @map("user_role") @db.VarChar(30)
  sessionId     String?      @map("session_id") @db.VarChar(64)
  visitorId     String?      @map("visitor_id") @db.VarChar(64)
  isNewVisitor  Boolean      @default(false) @map("is_new_visitor")
  isNewSession  Boolean      @default(false) @map("is_new_session")
  requestId     String?      @map("request_id") @db.VarChar(64)
  createdAt     DateTime     @default(now()) @map("created_at")

  @@index([occurredAt])
  @@index([visitorClass, occurredAt])
  @@index([aiProvider, occurredAt])
  @@index([ipHash, occurredAt])
  @@index([routePattern, occurredAt])
  @@index([statusCode, occurredAt])
  @@map("traffic_events")
}

/// Hourly pre-aggregated traffic. Additive metrics only, so dashboard ranges
/// can be summed cheaply. `ai_provider`/`ai_category`/`country` use a "-"
/// sentinel instead of NULL so the dimension unique key stays valid.
model TrafficRollupHourly {
  id             String       @id @default(uuid()) @db.Uuid
  bucket         DateTime     @map("bucket")
  visitorClass   VisitorClass @map("visitor_class")
  aiProvider     String       @default("-") @map("ai_provider") @db.VarChar(60)
  aiCategory     String       @default("-") @map("ai_category") @db.VarChar(40)
  country        String       @default("-") @db.VarChar(8)
  routePattern   String       @map("route_pattern") @db.VarChar(255)
  referrerHost   String       @default("-") @map("referrer_host") @db.VarChar(255)
  deviceType     String       @default("-") @map("device_type") @db.VarChar(20)
  browser        String       @default("-") @db.VarChar(60)
  requests       Int          @default(0)
  clientErrors   Int          @default(0) @map("client_errors")
  serverErrors   Int          @default(0) @map("server_errors")
  sumDurationMs  BigInt       @default(0) @map("sum_duration_ms")
  maxDurationMs  Int          @default(0) @map("max_duration_ms")
  p95DurationMs  Int          @default(0) @map("p95_duration_ms")
  sumBytes       BigInt       @default(0) @map("sum_bytes")
  uniqueVisitors Int          @default(0) @map("unique_visitors")
  uniqueSessions Int          @default(0) @map("unique_sessions")
  newVisitors    Int          @default(0) @map("new_visitors")
  newSessions    Int          @default(0) @map("new_sessions")
  createdAt      DateTime     @default(now()) @map("created_at")
  updatedAt      DateTime     @updatedAt @map("updated_at")

  @@unique([bucket, visitorClass, aiProvider, aiCategory, country, routePattern, referrerHost, deviceType, browser], name: "rollup_hourly_dims")
  @@index([bucket])
  @@index([visitorClass, bucket])
  @@map("traffic_rollup_hourly")
}

/// Daily pre-aggregated traffic. Same shape as the hourly rollup.
model TrafficRollupDaily {
  id             String       @id @default(uuid()) @db.Uuid
  bucket         DateTime     @map("bucket") @db.Date
  visitorClass   VisitorClass @map("visitor_class")
  aiProvider     String       @default("-") @map("ai_provider") @db.VarChar(60)
  aiCategory     String       @default("-") @map("ai_category") @db.VarChar(40)
  country        String       @default("-") @db.VarChar(8)
  routePattern   String       @map("route_pattern") @db.VarChar(255)
  referrerHost   String       @default("-") @map("referrer_host") @db.VarChar(255)
  deviceType     String       @default("-") @map("device_type") @db.VarChar(20)
  browser        String       @default("-") @db.VarChar(60)
  requests       Int          @default(0)
  clientErrors   Int          @default(0) @map("client_errors")
  serverErrors   Int          @default(0) @map("server_errors")
  sumDurationMs  BigInt       @default(0) @map("sum_duration_ms")
  maxDurationMs  Int          @default(0) @map("max_duration_ms")
  p95DurationMs  Int          @default(0) @map("p95_duration_ms")
  sumBytes       BigInt       @default(0) @map("sum_bytes")
  uniqueVisitors Int          @default(0) @map("unique_visitors")
  uniqueSessions Int          @default(0) @map("unique_sessions")
  newVisitors    Int          @default(0) @map("new_visitors")
  newSessions    Int          @default(0) @map("new_sessions")
  createdAt      DateTime     @default(now()) @map("created_at")
  updatedAt      DateTime     @updatedAt @map("updated_at")

  @@unique([bucket, visitorClass, aiProvider, aiCategory, country, routePattern, referrerHost, deviceType, browser], name: "rollup_daily_dims")
  @@index([bucket])
  @@index([visitorClass, bucket])
  @@map("traffic_rollup_daily")
}

/// One row per detected abuse signal (flooding, scanning, AI spoofing, etc.).
model AbuseEvent {
  id          String          @id @default(uuid()) @db.Uuid
  detectedAt  DateTime        @default(now()) @map("detected_at")
  actorType   AccessActorType @map("actor_type")
  actorKey    String          @map("actor_key") @db.VarChar(120)
  ipHash      String?         @map("ip_hash") @db.VarChar(64)
  ipTruncated String?         @map("ip_truncated") @db.VarChar(45)
  userId      String?         @map("user_id") @db.Uuid
  category    String          @db.VarChar(60)
  severity    AbuseSeverity
  score       Int             @default(0)
  signals     Json?
  userAgent   String?         @map("user_agent") @db.Text
  path        String?         @db.Text
  createdAt   DateTime        @default(now()) @map("created_at")

  enforcementActions EnforcementAction[]

  @@index([detectedAt])
  @@index([actorType, actorKey])
  @@index([category, detectedAt])
  @@index([severity, detectedAt])
  @@map("abuse_events")
}

/// A tiered response applied to an actor (log-only / throttle / temporary
/// block). `appliedById` is null for automatic, system-driven actions.
model EnforcementAction {
  id           String          @id @default(uuid()) @db.Uuid
  abuseEventId String?         @map("abuse_event_id") @db.Uuid
  actorType    AccessActorType @map("actor_type")
  actorKey     String          @map("actor_key") @db.VarChar(120)
  type         EnforcementType
  reason       String          @db.Text
  appliedById  String?         @map("applied_by_id") @db.Uuid
  expiresAt    DateTime?       @map("expires_at")
  active       Boolean         @default(true)
  createdAt    DateTime        @default(now()) @map("created_at")

  abuseEvent AbuseEvent? @relation(fields: [abuseEventId], references: [id], onDelete: SetNull)

  @@index([actorType, actorKey])
  @@index([active, expiresAt])
  @@index([createdAt])
  @@map("enforcement_actions")
}

/// Operator-curated allow / block list. `actorValue` keeps the raw IP/CIDR,
/// session, or user id because matching needs the plain value.
model ActorAccessRule {
  id          String          @id @default(uuid()) @db.Uuid
  actorType   AccessActorType @map("actor_type")
  actorValue  String          @map("actor_value") @db.VarChar(120)
  ruleType    AccessRuleType  @map("rule_type")
  reason      String?         @db.Text
  createdById String?         @map("created_by_id") @db.Uuid
  expiresAt   DateTime?       @map("expires_at")
  active      Boolean         @default(true)
  createdAt   DateTime        @default(now()) @map("created_at")
  updatedAt   DateTime        @updatedAt @map("updated_at")

  @@unique([actorType, actorValue, ruleType])
  @@index([active])
  @@map("actor_access_rules")
}
